Arrumando fonte e imagens no header e footer

--- a/SITE/public/index.html
+++ b/SITE/public/index.html
@@ -13,8 +13,7 @@
 <body>
   <header>
     <div class="nav">
-      <a href="#home">Home</a>
-      <a href="#funcionalidades">Funcionalidades</a>
+      <a href="#home" class="link_selected" style="font-weight: bold;">Home</a>
       <a href="#pilares">Conheça a Argos</a>
     </div>
     <div class="nav2">
@@ -38,16 +37,16 @@
 
   <footer>
     <div class="footer">
-      <img src="./assets/logo.jpeg" alt="Logo">
+      <img src="./assets/logo.png" alt="Logo">
       <p>2026 Argos. Todos os direitos reservados.</p>
     </div>
     <hr>
     <div class="sociais">
       <p>Entre em contato conosco: <br>argos@argos.com.br</p>
       <div class="sociais-img">
-        <img src="./assets/logoInsta.jfif" alt="Instagram">
-        <img src="./assets/logoZap.png" alt="WhatsApp">
-        <img src="./assets/logoLinkedin.avif" alt="Linkedin">
+        <img src="./assets/instagram (1) 1.png" alt="Instagram">
+        <img src="./assets/whatsapp 1.png" alt="WhatsApp">
+        <img src="./assets/linkedin 1.png" alt="Linkedin">
       </div>
     </div>
   </footer>
