Criação do Banner da Home

--- a/SITE/public/index.html
+++ b/SITE/public/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="nav">
-      <a href="#home" class="link_selected" style="font-weight: bold;">Home</a>
+      <a href="#home" style="font-weight: bold;">Home</a>
       <a href="#pilares">Conheça a Argos</a>
     </div>
     <div class="nav2">
@@ -24,7 +24,16 @@
   </header>
 
   <div id="home">
-
+    <div class="banner">
+      <div class="container-banner">
+      <img src="./assets/logo.png" alt="" class="banner-img">
+      <p class="banner-text"> Disponibilidade total. 
+        <br> Integridade absoluta. 
+        <br> Prejuízo zero.
+      </p>
+      <a href="cadastro.html" class="banner-button"> Começar Agora </a>
+    </div>
+    </div>
   </div>
 
   <div id="funcionalidades">
