Criando a seção das funcionalidades na home

--- a/SITE/public/index.html
+++ b/SITE/public/index.html
@@ -37,7 +37,40 @@
   </div>
 
   <div id="funcionalidades">
+    <div class="container-funcionalidades">
+    <h2> Funcionalidades </h2>
+    <div class="container-cards">
+    <details class="card">
+    <summary>
+      <h3>Monitoramento em Tempo Real</h3>
+      <span class="icon">+</span>
+    </summary>
+    <div class="content">
+      <p>Acompanhe o desempenho de CPU, memória e hardware dos servidores de ocorrências policiais com precisão absoluta, garantindo que o sistema nunca pare.</p>
+    </div>
+  </details>
 
+  <details class="card">
+    <summary>
+      <h3>Prevenção de Falhas Críticas</h3>
+      <span class="icon">+</span>
+    </summary>
+    <div class="content">
+      <p>Identifique riscos de armazenamento e sobrecargas antes que se tornem problemas, assegurando a integridade dos dados da segurança pública.</p>
+    </div>
+  </details>
+
+  <details class="card">
+    <summary>
+      <h3>Alta Disponibilidade</h3>
+      <span class="icon">+</span>
+    </summary>
+    <div class="content">
+      <p>Garanta a continuidade operacional de sistemas de missão crítica, minimizando o tempo de inatividade e mantendo o atendimento à população ativo 24/7.</p>
+    </div>
+  </details>
+</div>
+</div>
   </div>
 
   <div id="pilares">
