Finalizando a pagina inicial

--- a/SITE/public/index.html
+++ b/SITE/public/index.html
@@ -14,7 +14,8 @@
   <header>
     <div class="nav">
       <a href="#home" style="font-weight: bold;">Home</a>
-      <a href="#pilares">Conheça a Argos</a>
+      <a href="#pilares">Nossos Pilares</a>
+      <a href="./sobrenos.html">Conheça a Argos</a>
     </div>
     <div class="nav2">
       <a href="cadastro.html">Cadastro</a>
@@ -26,55 +27,109 @@
   <div id="home">
     <div class="banner">
       <div class="container-banner">
-      <img src="./assets/logo.png" alt="" class="banner-img">
-      <p class="banner-text"> Disponibilidade total. 
-        <br> Integridade absoluta. 
-        <br> Prejuízo zero.
-      </p>
-      <a href="cadastro.html" class="banner-button"> Começar Agora </a>
-    </div>
+        <img src="./assets/logo.png" alt="" class="banner-img">
+        <p class="banner-text"> Disponibilidade total.
+          <br> Integridade absoluta.
+          <br> Prejuízo zero.
+        </p>
+        <a href="cadastro.html" class="banner-button"> Começar Agora </a>
+      </div>
     </div>
   </div>
 
   <div id="funcionalidades">
     <div class="container-funcionalidades">
-    <h2> Funcionalidades </h2>
-    <div class="container-cards">
-    <details class="card">
-    <summary>
-      <h3>Monitoramento em Tempo Real</h3>
-      <span class="icon">+</span>
-    </summary>
-    <div class="content">
-      <p>Acompanhe o desempenho de CPU, memória e hardware dos servidores de ocorrências policiais com precisão absoluta, garantindo que o sistema nunca pare.</p>
-    </div>
-  </details>
+      <h2> Funcionalidades </h2>
+      <div class="container-cards">
+        <details class="card">
+          <summary>
+            <h3>Monitoramento em Tempo Real</h3>
+            <span class="icon">+</span>
+          </summary>
+          <div class="content">
+            <p>Acompanhe o desempenho de CPU, memória e hardware dos servidores de ocorrências policiais com precisão
+              absoluta, garantindo que o sistema nunca pare.</p>
+          </div>
+        </details>
 
-  <details class="card">
-    <summary>
-      <h3>Prevenção de Falhas Críticas</h3>
-      <span class="icon">+</span>
-    </summary>
-    <div class="content">
-      <p>Identifique riscos de armazenamento e sobrecargas antes que se tornem problemas, assegurando a integridade dos dados da segurança pública.</p>
-    </div>
-  </details>
+        <details class="card">
+          <summary>
+            <h3>Prevenção de Falhas Críticas</h3>
+            <span class="icon">+</span>
+          </summary>
+          <div class="content">
+            <p>Identifique riscos de armazenamento e sobrecargas antes que se tornem problemas, assegurando a
+              integridade dos dados da segurança pública.</p>
+          </div>
+        </details>
 
-  <details class="card">
-    <summary>
-      <h3>Alta Disponibilidade</h3>
-      <span class="icon">+</span>
-    </summary>
-    <div class="content">
-      <p>Garanta a continuidade operacional de sistemas de missão crítica, minimizando o tempo de inatividade e mantendo o atendimento à população ativo 24/7.</p>
+        <details class="card">
+          <summary>
+            <h3>Alta Disponibilidade</h3>
+            <span class="icon">+</span>
+          </summary>
+          <div class="content">
+            <p>Garanta a continuidade operacional de sistemas de missão crítica, minimizando o tempo de inatividade e
+              mantendo o atendimento à população ativo 24/7.</p>
+          </div>
+        </details>
+      </div>
     </div>
-  </details>
-</div>
-</div>
+  </div>
+
+  <div class="chamada">
+    <div class="container-chamada">
+      <p>Sua gestão de servidores no próximo nível: <br>
+        <span>controle absoluto sobre o hardware para <br> sistemas que não podem parar.</span>
+      </p>
+      <a href="./cadastro.html"><button>Cadastrar</button></a>
+    </div>
   </div>
 
   <div id="pilares">
+    <div class="pilares-texto">
+      <p>Na <span>Argos</span>, atuamos com base em pilares essenciais, sempre com o foco <br> na disponibilidade, confiança e integridade dos seus sistemas.</p>
+    </div>
+    <div class="pilares-card">
+      <div class="pilares-card1">
+        <h4 class="titulo">
+          <img src="" alt="">
+          Tecnologia de Ponta com Eficiência
+        </h4>
+        <p>Oferecer monitoramento avançado de hardware com simplicidade operacional e otimização de recursos públicos.</p>
+      </div>
+      <div class="pilares-card2">
+        <h4 class="titulo">
+          <img src="" alt="">
+          Base Confiável 
+        </h4>
+        <p>Ser a fonte precisa de dados em tempo real para garantir que sua tomada de decisão nunca seja interrompida por falhas técnicas.</p>
+      </div>
+    </div>
+    <div class="pilares-card">
+      <div class="pilares-card2">
+        <h4 class="titulo">
+          <img src="" alt="">
+          Continuidade da Operação e Serviço Público
+        </h4>
+        <p>Zelar pela estabilidade dos sistemas que protegem a sociedade, garantindo que o atendimento à população nunca pare.</p>
+      </div>
+      <div class="pilares-card1">
+        <h4 class="titulo">
+          <img src="" alt="">
+          Proteção Máxima contra Indisponibilidade 
+        </h4>
+        <p>Garantir a blindagem do hardware contra sobrecargas, evitando perda de dados criminais e prejuízos financeiros ao Estado.</p>
+      </div>
+    </div>
+  </div>
 
+   <div class="chamada2">
+    <div class="container-chamada2">
+      <span>Monitore em tempo real e antecipe-se a falhas.</span>
+        <p>Estabilidade é prioridade. Veja o desempenho agora.</p>
+      <a href="./cadastro.html"><button>Começar agora</button></a>
+    </div>
   </div>
 
   <footer>
