--- a/SITE/public/sobrenos.html
+++ b/SITE/public/sobrenos.html
@@ -15,8 +15,7 @@
     <!--header inicio-->
  <header>
     <div class="nav">
-      <a href="#home" style="font-weight: bold;">Home</a>
-      <a href="#pilares">Conheça a Argos</a>
+      <a href="./index.html" style="font-weight: bold;">Home</a>
     </div>
     <div class="nav2">
       <a href="cadastro.html">Cadastro</a>
@@ -37,8 +36,8 @@
         <div class="container">
             <h2>Como funcionamos?</h2>
             <div class="texto-meio">
-              <p>A Argos é a solução definitiva para o monitoramento contínuo de hardware em servidores de missão crítica. Nosso foco é transformar a gestão da sua infraestrutura tecnológica, tornando-a proativa, inteligente e resiliente.</p> <br>
-              <p>Diferente dos métodos convencionais  que dependem de verificações manuais reativas e diagnósticos tardios, nossa proposta é inovadora: oferecemos uma solução integrada e preventiva que monitora CPU, memória e armazenamento em tempo real. Através de uma plataforma web intuitiva, antecipamos falhas antes que elas interrompam o atendimento à população, garantindo a continuidade operacional onde ela é mais necessária.</p>
+              <p>A <span>Argos</span> é a solução definitiva para o <span>monitoramento contínuo</span> de hardware em servidores de missão crítica. Nosso foco é <span>transformar</span> a gestão da sua infraestrutura tecnológica, tornando-a <span>proativa, inteligente e resiliente.</span></p> <br>
+              <p>Diferente dos métodos convencionais  que dependem de verificações manuais reativas e diagnósticos tardios, nossa proposta é <span>inovadora:</span> oferecemos uma <span>solução integrada e preventiva</span> que monitora CPU, memória e armazenamento em <span>tempo real</span>. Através de uma plataforma web <span>intuitiva</span>, antecipamos falhas antes que elas interrompam o atendimento à população, <span>garantindo a continuidade operacional</span> onde ela é mais necessária.</p>
             </div>
         </div>
 
