Estilização_da_pag_cadastro_realizado

--- a/SITE/public/cadastro.html
+++ b/SITE/public/cadastro.html
@@ -85,6 +85,19 @@
 
         <div id="div_erros_login"></div>
     </div>
+
+    <div class="effect-text">
+      <h2>SEJA BEM-VINDO</h2>
+
+      <div class="logo">
+        <img src="../public/assets/logo.png" alt="logo">
+      </div>
+
+      <p>Comece a proteger sua</p>
+      <p>infraestrutura hoje mesmo.</p>
+
+      <span>Já possui cadastro?<a href="./login.html">Logue Aqui!</a></span>
+    </div>
   </div>
 
   <!--footer inicio-->
