Ajustando telas de login e cadastro

--- a/SITE/public/cadastro.html
+++ b/SITE/public/cadastro.html
@@ -17,19 +17,18 @@
 </head>
 
 <body onload="listar()">
-  <!--header inicio-->
-  <!-- <header>
+    <header>
     <div class="nav">
-      <a href="#home" style="font-weight: bold;">Home</a>
-      <a href="#pilares">Conheça a Argos</a>
+      <a href="./index.html" style="font-weight: bold;">Home</a>
+      <a href="./index.html">Nossos Pilares</a>
+      <a href="./sobrenos.html">Conheça a Argos</a>
     </div>
     <div class="nav2">
       <a href="cadastro.html">Cadastro</a>
       <p>|</p>
       <a href="login.html">Login</a>
     </div>
-  </header> -->
-  <!--header fim-->
+  </header>
 
   <div class="login">
 <!--     <div class="alerta_erro">
@@ -78,7 +77,6 @@
           </div>
           <button class="botao" onclick="cadastrar()">REALIZAR CADASTRO</button>
         </div>
-        <div class="bar"></div>
 <!--         <div id="div_aguardar" class="loading-div">
           <img src="./assets/circle-loading.gif" id="loading-gif" />
         </div> -->
@@ -100,14 +98,21 @@
     </div>
   </div>
 
-  <!--footer inicio-->
-  <!-- <div class="footer">
-    <div class="container">
-      <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-      <span class="version">v1.0.0</span>
+  <footer>
+    <div class="footer">
+      <img src="./assets/logo.png" alt="Logo">
+      <p>2026 Argos. Todos os direitos reservados.</p>
     </div>
-  </div> -->
-  <!--footer fim-->
+    <hr>
+    <div class="sociais">
+      <p>Entre em contato conosco: <br>argos@argos.com.br</p>
+      <div class="sociais-img">
+        <img src="./assets/instagram (1) 1.png" alt="Instagram">
+        <img src="./assets/whatsapp 1.png" alt="WhatsApp">
+        <img src="./assets/linkedin 1.png" alt="Linkedin">
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
