--- a/SITE/public/login.html
+++ b/SITE/public/login.html
@@ -16,6 +16,18 @@
 </head>
 
 <body>
+    <header>
+    <div class="nav">
+      <a href="./index.html" style="font-weight: bold;">Home</a>
+      <a href="./index.html">Nossos Pilares</a>
+      <a href="./sobrenos.html">Conheça a Argos</a>
+    </div>
+    <div class="nav2">
+      <a href="cadastro.html">Cadastro</a>
+      <p>|</p>
+      <a href="login.html">Login</a>
+    </div>
+  </header>
     <div class="login">
         <div class="alerta_erro", style="display: none;">
             <div class="card_erro" id="cardErro">
@@ -36,7 +48,6 @@
                     </div>
                     <button class="botao" onclick="entrar()">LOGAR</button>
                 </div>
-                <hr>
 
             </div>
             <div class="cardsLogin card-login2">
@@ -52,9 +63,20 @@
 
         <div style="display: none;" id="div_erros_login"></div>
     </div>
-
-
-
+    <footer>
+    <div class="footer">
+      <img src="./assets/logo.png" alt="Logo">
+      <p>2026 Argos. Todos os direitos reservados.</p>
+    </div>
+    <div class="sociais">
+      <p>Entre em contato conosco: <br>argos@argos.com.br</p>
+      <div class="sociais-img">
+        <img src="./assets/instagram (1) 1.png" alt="Instagram">
+        <img src="./assets/whatsapp 1.png" alt="WhatsApp">
+        <img src="./assets/linkedin 1.png" alt="Linkedin">
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
