Atualizando imagem e fazendo ajustes de css

--- a/SITE/public/index.html
+++ b/SITE/public/index.html
@@ -8,6 +8,7 @@
   <title>Projeto Argos | Página Inicial</title>
   <script src="./js/sessao.js"></script>
   <link rel="stylesheet" href="./css/estilo.css">
+  <link rel="icon" href="./assets/favicon.png">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
   <div id="home">
     <div class="banner">
       <div class="container-banner">
-        <img src="./assets/logo.png" alt="" class="banner-img">
+        <img src="./assets/logo.png" alt="">
         <p class="banner-text"> Disponibilidade total.
           <br> Integridade absoluta.
           <br> Prejuízo zero.
