--- a/SITE/public/login.html
+++ b/SITE/public/login.html
@@ -52,7 +52,7 @@
             </div>
             <div class="cardsLogin card-login2">
                 <h2>BEM-VINDO DE VOLTA</h2>
-                <img style="width: 400px;" src="./assets/logo.png" alt="">
+                <img style="width: 40%;" src="./assets/logo.png" alt="">
                 <p>Entre para garantir a estabilidade do seu sistema.</p>
                 <a href="cadastro.html">Ainda não possui uma conta? Cadastre aqui</a>
             </div>
