animação_hover_que_roubei_do_login_que_o_richard_fez

--- a/SITE/public/cadastro.html
+++ b/SITE/public/cadastro.html
@@ -94,7 +94,7 @@
       <p>Comece a proteger sua</p>
       <p>infraestrutura hoje mesmo.</p>
 
-      <span>Já possui cadastro?<a href="./login.html">Logue Aqui!</a></span>
+    <a href="./login.html">Já possui cadastro? Logue Aqui!</a>
     </div>
   </div>
 
