Responsividade_da_pagina_de_login_e_cadastro

--- a/SITE/public/cadastro.html
+++ b/SITE/public/cadastro.html
@@ -76,6 +76,7 @@
             <input id="confirmacao_senha_input" type="password"  />
           </div>
           <button class="botao" onclick="cadastrar()">REALIZAR CADASTRO</button>
+          <a href="./login.html">Já possui cadastro? Logue Aqui!</a>
         </div>
 <!--         <div id="div_aguardar" class="loading-div">
           <img src="./assets/circle-loading.gif" id="loading-gif" />
