--- a/SITE/public/login.html
+++ b/SITE/public/login.html
@@ -47,6 +47,7 @@
                         <input id="senha_input" type="password" placeholder="******">
                     </div>
                     <button class="botao" onclick="entrar()">LOGAR</button>
+                    <a href="cadastro.html">Ainda não possui uma conta? Cadastre aqui</a>
                 </div>
 
             </div>
